[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/NyanJam22_Notes_Tmp.png" type="Texture" id=1]
[ext_resource path="res://DanceStage/JudgementArea.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38.125, 11 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 38, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 38, 9 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 38, 16.5 )

[node name="JudgementArea" type="Node2D"]
position = Vector2( 100, 100 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5
frame = 4

[node name="EarlyArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EarlyArea2D"]
position = Vector2( 0.125, -17 )
shape = SubResource( 1 )

[node name="GreatArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GreatArea2D"]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="PerfectArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerfectArea2D"]
position = Vector2( 0, 19 )
shape = SubResource( 3 )

[node name="LateArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LateArea2D"]
position = Vector2( 0, 44.5 )
shape = SubResource( 4 )
